--- a/roles/webserver/tasks/configure_firewall.yml
+++ b/roles/webserver/tasks/configure_firewall.yml
@@ -2,28 +2,21 @@
   become: true
 
   tasks:
-    - name: Install UFW on Debian
-      apt:
+    - name: Install UFW
+      ansible.builtin.package:
         name: ufw
         state: present
-      when: ansible_facts['os_family'] == "Debian"
-
-    - name: Install UFW on RedHat
-      yum:
-        name: ufw
-        state: present
-      when: ansible_facts['os_family'] == "RedHat"
 
     - name: Enabling UFW
-      ufw:
+      community.general.ufw:
         state: enabled
 
     - name: Allow ssh
-      ufw:
+      community.general.ufw:
         rule: allow
         port: 22
 
     - name: Allow http
-      ufw:
+      community.general.ufw:
         rule: allow
         port: 80
