--- a/roles/webserver/tasks/deploy_app.yml
+++ b/roles/webserver/tasks/deploy_app.yml
@@ -2,16 +2,16 @@
   become: true
   tasks:
     - name: Create Directory
-      file:
+      ansible.builtin.file:
         path: /var/www/html
         state: directory
 
     - name: Copy File to Remote Machines
-      copy:
+      ansible.builtin.copy:
         src: /home/kirb/Sessions/Python/TP4/roles/webserver/files/index.html
         dest: /var/www/html/index.html
 
     - name: Restart Apache
-      service:
+      ansible.builtin.service:
         name: "{{ 'apache2' if ansible_facts['os_family'] == 'Debian' else 'httpd' }}"
         state: restarted
