--- a/roles/webserver/tasks/install_apache.yml
+++ b/roles/webserver/tasks/install_apache.yml
@@ -1,26 +1,16 @@
 - hosts: webserver
   become: true
-  tasks:
-    - name: "Installer Apache sur Debian OS"
-      apt:
-        name: apache2
-        state: present
-      when: ansible_facts["os_family"] == 'Debian'
-    - name: "Démarrer le service Apache"
-      service:
-        name: apache2
-        state: started
-        enabled: yes
-      when: ansible_facts["os_family"] == 'Debian'
 
-    - name: "Installer httpd sur RedHat OS"
-      dnf:
-        name: httpd
+  vars:
+    apache_pkg: "{{ 'httpd' if ansible_facts['os_family'] == 'RedHat' else 'apache2' }}"
+  tasks:
+    - name: Install Apache
+      ansible.builtin.package:
+        name: "{{ apache_pkg }}"
         state: present
-      when: ansible_facts["os_family"] == 'RedHat'
-    - name: "Démarrer le service httpd"
-      service:
-        name: httpd
+
+    - name: Enable Apache service
+      ansible.builtin.service:
+        name: "{{ apache_pkg }}"
         state: started
         enabled: yes
-      when: ansible_facts["os_family"] == 'RedHat'
