--- a/roles/webserver/tasks/update_systems.yml
+++ b/roles/webserver/tasks/update_systems.yml
@@ -1,14 +1,7 @@
 - hosts: webserver
   become: true
   tasks:
-    - name: Update Packages in Debian
-      apt:
+    - name: Update Packages
+      ansible.builtin.package:
         name: "*"
         state: latest
-      when: ansible_facts["os_family"] == 'Debian'
-
-    - name: Update Packages in RedHat
-      dnf:
-        name: "*"
-        state: latest
-      when: ansible_facts["os_family"] == 'RedHat'
