--- a/roles/webserver/tasks/manage_users.yml
+++ b/roles/webserver/tasks/manage_users.yml
@@ -1,34 +1,15 @@
-- hosts: webserver
-  become: true
+- name: Add a sudo user
+  user:
+    name: "{{ user }}"
+    password: "{{ pwd }}"
+    groups: "{{ group[ansible_facts['os_family']] }}"
+    append: yes
+    state: present
+  when: access  == 'y'
 
-  vars:
-    group:
-      Debian: sudo
-      RedHat: wheel
-
-  vars_prompt:
-    - name: user
-      prompt: Username
-
-    - name: pwd
-      prompt: Password
-
-    - name: access
-      prompt: Is it a sudo user?
-
-  tasks:
-    - name: Add a sudo user
-      user:
-        name: "{{ user }}"
-        password: "{{ pwd | password_hash('sha512') }}"
-        groups: "{{ group[ansible_facts['os_family']] }}"
-        append: yes
-        state: present
-      when: " access  == 'yes' or  access  == 'y' "
-
-    - name: Add a user
-      user:
-        name: "{{ user }}"
-        password: "{{ pwd | password_hash('sha512') }}"
-        state: present
-      when: " access == 'no' or access == 'n' "
+- name: Add a user
+  user:
+    name: "{{ user }}"
+    password: "{{ pwd | password_hash('sha512') }}"
+    state: present
+  when: access == 'n'
