--- a/roles/webserver/tasks/manage_users.yml
+++ b/roles/webserver/tasks/manage_users.yml
@@ -10,6 +10,6 @@
 - name: Add a user
   user:
     name: "{{ user }}"
-    password: "{{ pwd | password_hash('sha512') }}"
+    password: "{{ pwd }}"
     state: present
   when: access == 'n'
